yoshimi 2.3.4 rc1

2025-6-6 Will
Tested LV2 for Ardour and Qtractor.
Prepared background doccumentation.
Further adjustments to user guide.

2025-6-6 Will
bn 2388
Updated HTML user guide.
Set version 2.3.4 rc1

2025-6-6 Will
bn 2387
Merged in changed parts warnings from parts branch.

2025-5-26 Will
bn 2386
Fixed Omni CLI off by one error and clarified messages.
Added Fl/platform.H to MiscGui.cpp and WidgetPDial.cpp
    for FLTK V1.4 compatibility.
Removed some long redundant commented out code.
Updated some theme example files.
Added Fiddle Kit to Strings bank.
Added Hollow Pulse to Will_Godfrey_Companion bank.

2025-5-9 Will
bn 2385
Removed redundant and commented YoshiWin code.
Removed unnecessary FL.x entry in WidgetPDial.

2025-4-8 Will
bn 2384
Merged in Omni control from Kristian
    made a couple of minor updates.

2025-2-26 Will
bn 2382
Added tooltip to main window menu bar.
Set bugfix release to 2.3.3.3
Added canaries (currently disabled)
    YoshimiLV2Pligin.cpp
        lines 293 - 298, 634
    Interchange.cpp
        line 1840

2025-2-7 Will
bn 2381
BugFix: Cmake failing on Suse building.

2025-2-3 Will
bn 2380
Merged in LV2 updates from Kristian
BugFix: Reports destination changes not being saved.

2025-2-2 Will
bn 2379
Display labels defined in TextLists, global.h and
    described in Control Data

2025-1-23 Will
bn 2378
Further work on new Display controls
    Currently only stand-alone and accessible from zread.
    Now checks for GUI enabled, and valid part level.

2025-1-21 Will
bn 2377
Renamed new Geometry section to Display.
Added theme control placeholder values.
Implemented mininum controls to report skeleton use
    in interchange.cpp
Partially updated Control Data entries.

2025-1-14 Will
bn 2376
Installed placeholder for new Window Geometry code.
Added new bank entries to Drums and Pads.
Further adjustments to textlists.cpp

2025-1-3 Will
bn 2375
Cleanups and consistency adjustments to textlists.cpp.

2025-1-3 Will
bn 2374